added a lot of small quality of life things, BCPs and protein functionality

--- a/HTP_compdrift.ipynb
+++ b/HTP_compdrift.ipynb
@@ -40,7 +40,7 @@
     "\n",
     "# Molar ratios of each monomer\n",
     "# ex. if N_MONs = 4: [0.5, 0.25, 0.20, 0.05]\n",
-    "MRs = [50, 25, 20, 5]\n",
+    "MRs = [50, 0, 20, 0]\n",
     "\n",
     "# What model of copolymerization to use? (1) mayolewis (terminal) or (2) penultimate\n",
     "# NOTE FOR NOW ONLY MAYO-LEWIS IMPLEMENTED.\n",
@@ -65,26 +65,25 @@
     "conv = 0.5\n",
     "\n",
     "# average degree of polymerization (chain length) you are targetting at YOUR conversion, NOT at 100%.\n",
-    "avgDP = 50\n",
+    "avgDP = 105\n",
     "\n",
     "# number of polymer chains to simulate\n",
-    "N_CHAINs = 10000\n",
+    "N_CHAINs = 1000\n",
     "\n",
     "# Chain transfer % (0-1)\n",
     "# TODO: replace this with direct PDI control (not sure how)\n",
     "# NOTE TO SELF: for now just fix CTP such that PDI ~ 1.2, as thats roughly the control our RAFT synthesis gives.\n",
-    "CTP = 0.15\n",
+    "CTP = 1\n",
     "\n",
     "# cutoff DP of chains considered as polymers not oligomers that get \"purified\" out\n",
     "# set to 0 if you don't want to do any filtration\n",
-    "PRUNE_OLIGOMERS = 10"
+    "PRUNE_OLIGOMERS = 0"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -118,26 +117,40 @@
    "outputs": [],
    "source": [
     "# Number of unique monomers\n",
-    "#N_MONs = 5\n",
-    "N_MONs = 4\n",
+    "N_MONs = 5\n",
+    "#N_MONs = [2,3,4,5]\n",
     "\n",
     "# Molar ratios of each monomer\n",
     "# ex. if N_MONs = 4: [0.5, 0.25, 0.20, 0.05]\n",
-    "MR = [50, 25, 20, 5]\n",
-    "#MRs = [[50, 25, 20, 5], [60,25,10,5], [20,25,50,5]]\n",
-    "#MRs = [[5, 70, 20, 5], [20, 55, 20, 5],[35, 40, 20, 5],[50, 25, 20, 5],[65, 10, 20, 5],\n",
-    "#      [50, 25, 20, 5],[45, 25, 20, 10],[40, 25, 20, 15]]\n",
+    "#MR = [50, 25, 20, 5]\n",
+    "#MRs = [[70,30,0,0,0], [51,27,22,0,0], [50,25,20,5,0], [45,20,15,5,15]]\n",
+    "#MRs = [[10, 65, 20, 5],[20, 55, 20, 5],[30, 45, 20, 5],[40, 35, 20, 5],[50, 25, 20, 5],[60, 15, 20, 5],[70, 5, 20, 5]]\n",
+    "#MRs = [[10,25,60,5],[20,25,50,5],[30,25,40,5],[40,25,30,5],[50, 25, 20, 5],[60,25,10,5]]\n",
+    "MRs = [[46,26,19,5,4], [33,23,35,0,9], [47,24,20,0,9],[18,23,50,0,9],[57,24,10,0,9],[9,23,59,0,9]]\n",
     "\n",
-    "# reactivity ratios of monomers, ex. for 4 monomers:\n",
+    "# reactivity ratios of monomers, ex. for 5 monomers:\n",
     "#[r12, r13, r14, r15]\n",
     "#[r21, r23, r24, r25]\n",
     "#[r31, r32, r34, r35]\n",
     "#[r41, r42, r43, r45]\n",
     "#[r51, r52, r53, r54]\n",
+    "# 4 MONOMER RHP\n",
     "RRs = ([[1, 1, 1],\n",
     "        [1, 1.09, 1.09],\n",
     "        [1, 1.09, 1.09],\n",
     "        [1, 1.09, 1.09],])\n",
+    "# STYRENE 5TH MONOMER\n",
+    "#RRs = ([[1, 1, 1, 0.491],\n",
+    "#        [1, 1.09, 1.09, 0.53],\n",
+    "#        [1, 1.09, 1.09, 0.53],\n",
+    "#        [1, 1.09, 1.09, 0.53], \n",
+    "#        [0.697, 0.53, 0.53, 0.53]])\n",
+    "# MARCO'S POLYMER 5TH MON NHSMA\n",
+    "#RRs = ([[1, 1, 1, 1],\n",
+    "#        [1, 1.09, 1.09, 1],\n",
+    "#        [1, 1.09, 1.09, 1],\n",
+    "#        [1, 1.09, 1.09, 1], \n",
+    "#        [1.29, 1.58, 1.58, 1.58]])\n",
     "\n",
     "# % conversion targetted (0-1), i.e. how much of the monomer pool do you want to use\n",
     "conv = 0.5\n",
@@ -147,8 +160,8 @@
     "avgDP = 100\n",
     "\n",
     "# number of polymer chains to simulate\n",
-    "#N_CHAINs = 15000\n",
-    "N_CHAINs = [1000, 3000, 5000, 8000, 10000, 15000, 20000, 30000, 40000, 50000, 75000, 100000]\n",
+    "N_CHAINs = 15000\n",
+    "#N_CHAINs = [1000, 3000, 5000, 8000, 10000, 15000, 20000, 30000, 40000, 50000, 75000, 100000]\n",
     "\n",
     "# Chain transfer % (0-1)\n",
     "# TODO: replace this with direct PDI control (not sure how)\n",
@@ -167,12 +180,20 @@
    "outputs": [],
    "source": [
     "# UNCOMMENT TO VARY N_CHAINs\n",
-    "for n in N_CHAINs:\n",
-    "    run_simulation(N_MONs, n, MR, RRs, avgDP, conv, CTP, PRUNE_OLIGOMERS)\n",
+    "#for n in N_CHAINs:\n",
+    "#    run_simulation(N_MONs, n, MR, RRs, avgDP, conv, CTP, PRUNE_OLIGOMERS)\n",
     "\n",
     "# UNCOMMENT TO VARY MRs\n",
-    "#for m in MRs:\n",
-    "#    run_simulation(N_MONs, N_CHAINs, m, RRs, avgDP, conv, CTP, PRUNE_OLIGOMERS)"
+    "for m in MRs:\n",
+    "    run_simulation(N_MONs, N_CHAINs, m, RRs, avgDP, conv, CTP, PRUNE_OLIGOMERS)\n",
+    "\n",
+    "# UNCOMMENT TO VARY N_MONs\n",
+    "#for n,m in zip(N_MONs, MRs):\n",
+    "#    run_simulation(n, N_CHAINs, m, RRs, avgDP, conv, CTP, PRUNE_OLIGOMERS)\n",
+    "\n",
+    "# UNCOMMENT TO VARY DPs:\n",
+    "#for d in avgDPs:\n",
+    "#    run_simulation(N_MONs, N_CHAINs, MR, RRs, d, conv, CTP, PRUNE_OLIGOMERS)"
    ]
   },
   {
@@ -257,7 +278,7 @@
     "\n",
     "### SET MOLECULAR WEIGHTS OF MONOMERS IN ORDER OF LABEL (labels are 1 indexed)\n",
     "Mw = [100.121,500,198.3,246.32, 104.15]\n",
-    "HLBs = [8.45, 11.42, 5.125, 18.5, 5]"
+    "HLBs = [8.45, 11.42, 5.125, 18.5, 5]  # 5th one is made up for Styrene - NEED TO REPLACE."
    ]
   },
   {
@@ -319,22 +340,30 @@
     "    MR4s = []\n",
     "    MR5s = []\n",
     "    for name in names:\n",
-    "        # n_mons, MR1, ... MRN, n_chains, DP, conv, CTP, Filt\n",
-    "        num_vals = re.findall(r'\\d+', name)\n",
-    "        n_mons.append(int(num_vals[0]))\n",
-    "        MR1s.append(int(num_vals[1]))\n",
-    "        MR2s.append(int(num_vals[2]))\n",
-    "        if len(num_vals) > 8:\n",
-    "            MR3s.append(int(num_vals[3]))\n",
-    "        else:\n",
+    "        try:\n",
+    "            # n_mons, MR1, ... MRN, n_chains, DP, conv, CTP, Filt\n",
+    "            num_vals = re.findall(r'\\d+', name)\n",
+    "            n_mons.append(int(num_vals[0]))\n",
+    "            MR1s.append(int(num_vals[1]))\n",
+    "            MR2s.append(int(num_vals[2]))\n",
+    "            if len(num_vals) > 8:\n",
+    "                MR3s.append(int(num_vals[3]))\n",
+    "            else:\n",
+    "                MR3s.append(0)\n",
+    "            if len(num_vals) > 9:\n",
+    "                MR4s.append(int(num_vals[4]))\n",
+    "            else:\n",
+    "                MR4s.append(0)\n",
+    "            if len(num_vals) > 10:\n",
+    "                MR5s.append(int(num_vals[5]))\n",
+    "            else:\n",
+    "                MR5s.append(0)\n",
+    "        except IndexError as err:\n",
+    "            n_mons.append(4)\n",
+    "            MR1s.append(0)\n",
+    "            MR2s.append(0)\n",
     "            MR3s.append(0)\n",
-    "        if len(num_vals) > 9:\n",
-    "            MR4s.append(int(num_vals[4]))\n",
-    "        else:\n",
     "            MR4s.append(0)\n",
-    "        if len(num_vals) > 10:\n",
-    "            MR5s.append(int(num_vals[5]))\n",
-    "        else:\n",
     "            MR5s.append(0)\n",
     "    num_seqs.append(i)\n",
     "    avg_Mns.append(AvgMn)\n",
@@ -345,6 +374,56 @@
     "d = {'Batch Name': names, 'Mons': n_mons, 'MR1': MR1s, 'MR2': MR2s, 'MR3': MR3s, 'MR4': MR4s, 'MR5': MR5s, 'NumSeqs': num_seqs, 'Avg Mn': avg_Mns, 'Avg Mw': avg_Mws, 'PDI': PDIs, 'Avg DP': avg_DPs}\n",
     "df_prop = pd.DataFrame(data=d)\n",
     "df_prop"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### [Optional Segment] Combine di-blocks of BCPs together\n",
+    "Uncomment this section if you need to combine separately simulated blocks of BCPs together, it is quite manual still so need to make sure the hard coded indices and stuff are correct."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# UNCOMMENT THIS SECTION IF YOU NEED TO COMBINE DI-BLOCKS\n",
+    "\"\"\"\n",
+    "BCP1_seq = []\n",
+    "for i in range(min(len(seqs[3]),len(seqs[0]))):\n",
+    "    new_seq = seqs[3][i] + seqs[0][i]\n",
+    "    if len(new_seq) < 86:\n",
+    "        BCP1_seq.append(new_seq)\n",
+    "\n",
+    "file = open('outputs/DHP_short.csv', 'w+') \n",
+    "with file:     \n",
+    "    write = csv.writer(file) \n",
+    "    write.writerows(BCP1_seq) \n",
+    "\n",
+    "    \n",
+    "BCP2_seq = []\n",
+    "for i in range(min(len(seqs[2]),len(seqs[1]))):\n",
+    "    new_seq = seqs[2][i] + seqs[1][i]\n",
+    "    if len(new_seq) < 158:\n",
+    "        BCP2_seq.append(new_seq)\n",
+    "\n",
+    "file = open('outputs/DHP_long.csv', 'w+') \n",
+    "with file:     \n",
+    "    write = csv.writer(file) \n",
+    "    write.writerows(BCP2_seq) \n",
+    "\"\"\";"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Read csv output files of 'n' batches and convert to n-element pd dataframe"
    ]
   },
   {
@@ -412,7 +491,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "### Histograms of composition on each individual monomer chain:\n",
@@ -478,7 +559,7 @@
     "    ax.spines[\"right\"].set_linewidth(1.5)\n",
     "    ax.tick_params('both', length=10, width=1.5, which='major')\n",
     "    plt.xlim(0,1)\n",
-    "    plt.ylim(0,35)\n",
+    "    plt.ylim(0,25)\n",
     "    plt.legend(frameon=False)\n",
     "    plt.tight_layout()\n",
     "\n",
@@ -518,10 +599,10 @@
     "plt.clf()   # Clear figure\n",
     "fig, ax = plt.subplots(1, 1, figsize=(10,10))\n",
     "sns.set_style(style='white') #style='white' or 'darkgrid'\n",
-    "ax = sns.regplot(x=\"NumSeqs\", y=\"FWHM_0\", data=df_prop, label='MMA')\n",
-    "ax = sns.regplot(x=\"NumSeqs\", y=\"FWHM_1\", data=df_prop, label='OEGMA')\n",
-    "ax = sns.regplot(x=\"NumSeqs\", y=\"FWHM_2\", data=df_prop, label='EHMA') \n",
-    "ax = sns.regplot(x=\"NumSeqs\", y=\"FWHM_3\", data=df_prop, label='SPMA')\n",
+    "ax = sns.regplot(x=\"Avg Mn\", y=\"FWHM_0\", data=df_prop, label='MMA')\n",
+    "ax = sns.regplot(x=\"Avg Mn\", y=\"FWHM_1\", data=df_prop, label='OEGMA')\n",
+    "ax = sns.regplot(x=\"Avg Mn\", y=\"FWHM_2\", data=df_prop, label='EHMA') \n",
+    "ax = sns.regplot(x=\"Avg Mn\", y=\"FWHM_3\", data=df_prop, label='SPMA')\n",
     "#ax = sns.regplot(x=\"NumSeqs\", y=\"FWHM_4\", data=df_prop, label='Styrene')\n",
     "ax.set_ylabel('FWHM')\n",
     "#ax.set(ylim=(0, 1))\n",
@@ -600,7 +681,7 @@
    "source": [
     "#SEQ2SEQ NEW ANALYSIS DATA\n",
     "\n",
-    "b_no = 1\n",
+    "b_no = 0\n",
     "\n",
     "rows_size = len(dfs[b_no])\n",
     "cols_size = len(dfs[b_no].columns)\n",
@@ -639,7 +720,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "#SEQ2SEQ PLOTTING: HYDROPHOBIC\n",
@@ -684,7 +767,7 @@
     "ax.spines[\"left\"].set_linewidth(1.5)\n",
     "ax.spines[\"right\"].set_linewidth(1.5)\n",
     "ax.tick_params('both', length=10, width=1.5, which='major')\n",
-    "plt.xlim(1,40)\n",
+    "plt.xlim(1,20)\n",
     "plt.ylim(0,0.4)\n",
     "plt.legend(frameon=False)\n",
     "#plt.title(\"Hydrophobic Segments\")\n",
@@ -729,7 +812,7 @@
     "ax.spines[\"left\"].set_linewidth(1.5)\n",
     "ax.spines[\"right\"].set_linewidth(1.5)\n",
     "ax.tick_params('both', length=10, width=1.5, which='major')\n",
-    "plt.xlim(1,40)\n",
+    "plt.xlim(1,20)\n",
     "plt.ylim(0,0.4)\n",
     "plt.legend(frameon=False)\n",
     "#plt.title(\"Hydrophilic Segments\")\n",
@@ -946,8 +1029,8 @@
     "ax.spines[\"left\"].set_linewidth(1.5)\n",
     "ax.spines[\"right\"].set_linewidth(1.5)\n",
     "ax.tick_params('both', length=10, width=1.5, which='major')\n",
-    "plt.xlim(1,40)\n",
-    "plt.ylim(0,15)\n",
+    "plt.xlim(1,20)\n",
+    "plt.ylim(0,35)\n",
     "plt.legend(frameon=False)\n",
     "plt.show()\n",
     "plt.cla()\n",
@@ -972,8 +1055,8 @@
     "ax.spines[\"left\"].set_linewidth(1.5)\n",
     "ax.spines[\"right\"].set_linewidth(1.5)\n",
     "ax.tick_params('both', length=10, width=1.5, which='major')\n",
-    "plt.xlim(1,40)\n",
-    "plt.ylim(0,15)\n",
+    "plt.xlim(1,20)\n",
+    "plt.ylim(0,35)\n",
     "plt.legend(frameon=False)\n",
     "plt.show()\n",
     "plt.cla()\n",
@@ -994,26 +1077,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "this_mon = dfs[1][116][1]\n",
-    "print(this_mon)\n",
-    "this_mon == None"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#specific segment pattern search\n",
-    "b_no = 1\n",
+    "b_no = 0\n",
     "s_no = 1\n",
     "\n",
     "oegma_counter = 0\n",
@@ -1048,9 +1116,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "### Specific segment pattern search (seq2seq level)\n",
@@ -1103,12 +1169,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "b_no = 1\n",
+    "b_no = 2\n",
     "ARR_5 = []\n",
     "ARR_8 = []\n",
     "ARR_10 = []\n",
@@ -1165,24 +1229,24 @@
     "\n",
     "plt.figure(num=None, figsize=(12, 8), dpi=80, facecolor='w', edgecolor='k')\n",
     "# sns.set_style(style='white') #style='white' or 'darkgrid'\n",
-    "plt.xlabel(\"Segment number per chain\")\n",
+    "plt.xlabel(\"Number of hydrophobic segments with 1 OEGMA per chain\")\n",
     "plt.ylabel(\"Frequency\")\n",
     "sns.set_style(style = 'white')\n",
     "sns.lineplot(x = np.array(np.linspace(0, len(data_5)-1, num = len(data_5))), y = data_5/df_prop['NumSeqs'][b_no], label = \"5\")\n",
     "sns.lineplot(x = np.array(np.linspace(0, len(data_8)-1, num = len(data_8))), y = data_8/df_prop['NumSeqs'][b_no], label = \"8\")\n",
     "sns.lineplot(x = np.array(np.linspace(0, len(data_10)-1, num = len(data_10))), y = data_10/df_prop['NumSeqs'][b_no], label = \"10\")\n",
     "sns.lineplot(x = np.array(np.linspace(0, len(data_13)-1, num = len(data_13))), y = data_13/df_prop['NumSeqs'][b_no], label = \"13\")\n",
+    "plt.xlim(0,10)\n",
+    "plt.ylim(0,0.9)\n",
     "plt.legend()\n",
-    "plt.title(\"Seq2Seq Specific Segment Search\")\n",
+    "#plt.title(\"Seq2Seq Specific Segment Search\")\n",
     "plt.show()\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#analyzes specific segment search data\n",
@@ -1208,12 +1272,13 @@
     "plt.clf()   # Clear figure\n",
     "plt.figure(num=None, figsize=(12, 8), dpi=80, facecolor='w', edgecolor='k')\n",
     "sns.set_style(style='white') #style='white' or 'darkgrid'\n",
-    "plt.xlabel(\"Segment Length\")\n",
+    "plt.xlabel(\"Hydrophobic with 1 OEGMA Segment Length\")\n",
     "plt.ylabel(\"Count Density\")\n",
+    "plt.xlim(0,65)\n",
     "sns.set_style(style = 'white')\n",
     "#Comment following lines to remove autolabelling\n",
     "for i in range(len(csv_files)):\n",
-    "    sns.distplot(total_array[i], label=str((i+2)*10)+\"% MMA\",hist = False, kde_kws={'bw':1})\n",
+    "    sns.distplot(total_array[i], label=round(df_prop.iloc[i]['Avg Mn'],0),hist = False, kde_kws={'bw':1})\n",
     "    plt.legend()\n",
     "## Uncomment to label manually\n",
     "#sns.distplot(total_array[0], label=\"5 Monomers\", hist=False, kde_kws={'bw':1})\n",
@@ -1221,7 +1286,6 @@
     "# sns.distplot(total_array[2], label=\"2 Monomers\",hist = False)\n",
     "# sns.distplot(total_array[3], label=\"3 Monomers\",hist = False)\n",
     "# plt.legend()\n",
-    "plt.title(\"Hydrophobic Segments with 1 OEGMA\")\n",
     "plt.show()"
    ]
   },
@@ -1247,8 +1311,8 @@
     "WIN_LENGTH = 9\n",
     "\n",
     "# for monomer-level plot\n",
-    "batch_num = 2\n",
-    "sequence_num = 15\n",
+    "batch_num = 4\n",
+    "sequence_num = 5\n",
     "\n",
     "# create a new list bins, to replace amino acids by corresponding hydrophobicity over the whole sequence \n",
     "def translate(chars, HLBs):\n",
@@ -1297,6 +1361,7 @@
     "    ax.axhline(y=HLB_CUTOFF, color='k', linestyle='--')\n",
     "    if xlim != None:\n",
     "        ax.set_xlim(0, xlim)\n",
+    "    ax.set_ylim(5,14.5)\n",
     "    ax.set(xlabel=\"Central Monomer Sequence Position\", ylabel=\"Window Average HLB Value\")\n",
     "    ax.spines[\"top\"].set_linewidth(1.5)\n",
     "    ax.spines[\"bottom\"].set_linewidth(1.5)\n",
@@ -1347,7 +1412,7 @@
     "bins = translate(this_seq, HLBs)\n",
     "sliding_arrays = window(bins, WIN_LENGTH)\n",
     "pos_val = seg_analysis(sliding_arrays, WIN_LENGTH)\n",
-    "win_plot(pos_val, WIN_LENGTH, 200)"
+    "win_plot(pos_val, WIN_LENGTH, 100)"
    ]
   },
   {
@@ -1444,7 +1509,7 @@
     "    plt.xlabel(\"Sequence position\")\n",
     "    plt.ylabel(\"Window average HLB\")\n",
     "    plt.xticks([])\n",
-    "    plt.xticks(np.arange(0,cols_size, step=20)) #TODO: fix x axis marks\n",
+    "    #plt.xticks(np.arange(0,cols_size, step=20)) #TODO: fix x axis marks\n",
     "    plt.show()\n",
     "    "
    ]
@@ -1463,10 +1528,10 @@
     "ax.spines[\"left\"].set_linewidth(1.5)\n",
     "ax.spines[\"right\"].set_linewidth(1.5)\n",
     "ax.tick_params('both', length=10, width=1.5, which='major')\n",
-    "plt.xlabel(\"MMA:EHMA Feed Ratio\")\n",
+    "plt.xlabel(\"Proteins\")\n",
     "plt.ylabel(\"Window average HLB Value\")\n",
-    "plt.xticks([1, 2, 3], [\"20:50\", \"50:20\", \"60:10\"]) #Change second arrays with labels\n",
-    "plt.ylim(5,14)\n",
+    "plt.xticks([1, 2, 3, 4, 5, 6], [\"AZ\", \"BCLip\", \"CALip\", \"PepTSo\", \"ProK\", \"avGFP\"]) #Change second arrays with labels\n",
+    "plt.ylim(5,14.5)\n",
     "#plt.grid(None)\n",
     "#plt.savefig('plot.eps', format='eps', bbox_inches='tight')\n",
     "plt.savefig('plot.pdf', bbox_inches='tight', dpi=100)\n",
