--- a/HTP_compdrift.ipynb
+++ b/HTP_compdrift.ipynb
@@ -602,6 +602,7 @@
     "N_MONS = 4 # number of monomers, from 2-5\n",
     "PARAM_2_VARY = \"Avg Mn\" # i.e., 'Batch Name', 'NC', 'Avg Mn'\n",
     "DISCRETE = True # note: 2 settings, discrete vs continuous to use for diff. data types\n",
+    "USE_TITLE = False # Set true if you want to add a plot label i.e. for labeling which plot is which\n",
     "############################\n",
     "\n",
     "for i in range(5):\n",
@@ -621,6 +622,8 @@
     "    ax = sns.regplot(x=PARAM_2_VARY, y=\"nFWHM_4\", data=df_prop, fit_reg=DISCRETE, label='Styrene')\n",
     "\n",
     "ax.set_ylabel('nFWHM')\n",
+    "if USE_TITLE:\n",
+    "    ax.set_title('placeholder')\n",
     "ax.spines[\"top\"].set_linewidth(1.5)\n",
     "ax.spines[\"bottom\"].set_linewidth(1.5)\n",
     "ax.spines[\"left\"].set_linewidth(1.5)\n",
@@ -720,6 +723,8 @@
     "PHOB_MAX = 60 # guess at upper bounded length for hydrophobic segment (magic number to be replaced)\n",
     "PHIL_MAX = 60 # guess at upper bounded length for hydrophilic segment (magic number to be replaced)\n",
     "\n",
+    "USE_TITLE = False # Set true if you want to add a plot label i.e. for labeling which plot is which\n",
+    "\n",
     "############################\n",
     "\n",
     "rows_size = len(dfs[b_no])\n",
@@ -810,7 +815,8 @@
     "plt.xlim(1,20)\n",
     "plt.ylim(0,1)\n",
     "plt.legend(title='X = ', frameon=False)\n",
-    "#plt.title(\"Hydrophobic Segments\")\n",
+    "if USE_TITLE:\n",
+    "    plt.title(\"Placeholder\")\n",
     "plt.savefig('Figures_Editable/seq2seq_hydrophobic_NChains_'+ str(df_prop.iloc[:,7][b_no]) + '_DP300.pdf')\n",
     "plt.show()\n",
     "plt.cla()\n",
@@ -864,6 +870,8 @@
     "plt.xlim(1,20)\n",
     "plt.ylim(0,1)\n",
     "plt.legend(title='X = ', frameon=False)\n",
+    "if USE_TITLE:\n",
+    "    plt.title(\"Placeholder\")\n",
     "plt.savefig('Figures_Editable/seq2seq_hydrophilic_NChains_'+ str(df_prop.iloc[:,7][b_no]) + '_DP300.pdf')\n",
     "plt.show()"
    ]
